고객센터 >  자주하는 질문 작업 페이지 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -422,6 +422,9 @@ strong {
 .mt85 {
   margin-top: 85px !important;
 }
+.mt100 {
+  margin-top: 100px !important;
+}
 
 .mb10 {
   margin-bottom: 10px !important;
