고객센터 > 모바일 서비스 안내 작업 페이지 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -419,6 +419,9 @@ strong {
 .mt70 {
   margin-top: 70px !important;
 }
+.mt80 {
+  margin-top: 80px !important;
+}
 .mt85 {
   margin-top: 85px !important;
 }
@@ -481,6 +484,9 @@ strong {
 }
 .mr30 {
   margin-right: 30px !important;
+}
+.mr70 {
+  margin-right: 70px !important;
 }
 
 .pt30 {
